footer main structure

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
   <header>
-    <iframe src="partials/header.html" width="100%" class="auto-height-iframe"></iframe>
+    <iframe src="partials/header.html" width="100%" class="auto-height-iframe" ></iframe>
   </header>
   <main>
-
-  </main>
+   </main> 
   <footer>
-
+    <iframe src="partials/footer.html" frameborder="0" width="100%" class="auto-height-iframe"></iframe>
   </footer>
 </body>
 </html>
