product card main structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grubic Design</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/main.css">
   <script src="js/javascript.js"></script>
 </head>
 <body>
@@ -12,9 +13,19 @@
     <iframe src="partials/header.html" width="100%" class="auto-height-iframe" ></iframe>
   </header>
   <main>
-   </main> 
+    <section id="hero-section">
+      <article class="moto">Urban Pulse, Graceful Living</article>
+      <img class="banner-pic" src="/images/graphics/banner.webp" alt="model">
+    </section>
+    <h2>best sellers</h2>
+    <section id="popular">
+       <iframe src="partials/productCard.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
+       <iframe src="partials/productCard.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
+       <iframe src="partials/productCard.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
+    </section>
+       </main> 
   <footer>
-    <iframe src="partials/footer.html" frameborder="0" width="100%" class="auto-height-iframe"></iframe>
+    <iframe src="partials/footer.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
   </footer>
 </body>
 </html>
