hero section done

--- a/index.html
+++ b/index.html
@@ -9,20 +9,42 @@
   <script src="js/javascript.js"></script>
 </head>
 <body>
-  <header>
-    <iframe src="partials/header.html" width="100%" class="auto-height-iframe" ></iframe>
+   <header>
+    <iframe src="partials/header.html" frameborder="0" width="100%" class="auto-height-iframe"></iframe>
   </header>
   <main>
     <section id="hero-section">
-      <article class="moto">Urban Pulse, Graceful Living</article>
-      <img class="banner-pic" src="/images/graphics/banner.webp" alt="model">
+      <article class="hero-section-content">
+      <img class="banner-pic" src="/images/graphics/supermodel-jewellery-photo-shoot-fashion-model-jewellery-78c4b3591760b96f5f5eb845d1ff1f66.png" alt="model">
+      <article class="graphic"></article>
+      <article class="shop-now">
+        <article class="moto">Urban Pulse, Graceful Living</article>
+        <article class="buy-here">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo id doloribus exercitationem placeat deserunt libero voluptatibus distinctio expedita, ratione minus?</article>
+        <article class="hero-btns">
+        <button>buy now!</button>
+        <button>wishlist</button>
+
+        </article>
+        
+      </article>
+    </article>
     </section>
-    <h2>best sellers</h2>
-    <section id="popular">
-       <iframe src="partials/productCard.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
-       <iframe src="partials/productCard.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
-       <iframe src="partials/productCard.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
-    </section>
+    <h2 style="background-color: white;">best sellers</h2>
+    <section class="best-sellers">
+      <article class="product-card"> 
+      <img class="product" src="../images/products/narukvica1.webp" alt="">
+      <h3>product name</h3>
+      <p>Delivery in 5-7 days</p>
+      <p>35.99$</p>
+      <article class="shopping">
+       <button class="cart">add to cart</button>
+      <button class="buy">buy</button>
+    </article>
+    </article>
+  </section>
+  <section class="categories">
+    <h2>categories</h2>
+  </section>
        </main> 
   <footer>
     <iframe src="partials/footer.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
