header 90%, todo: logo, links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <article class="buy-here">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo id doloribus exercitationem placeat deserunt libero voluptatibus distinctio expedita, ratione minus?</article>
         <article class="hero-btns">
         <button>buy now!</button>
-        <button>wishlist</button>
+        <button>wishlist <i class="fa fa-heart-o" aria-hidden="true"></i>
+        </button>
 
         </article>
         
