header done, footer 40%

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grubic Design</title>
+  <title>MetroJewel</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/main.css">
-  <script src="js/javascript.js"></script>
+
 </head>
 <body>
    <header>
@@ -16,17 +16,15 @@
     <section id="hero-section">
       <article class="hero-section-content">
       <img class="banner-pic" src="/images/graphics/supermodel-jewellery-photo-shoot-fashion-model-jewellery-78c4b3591760b96f5f5eb845d1ff1f66.png" alt="model">
-      <article class="graphic"></article>
+    <article class="graphic"></article>
+    </article>
       <article class="shop-now">
         <article class="moto">Urban Pulse, Graceful Living</article>
         <article class="buy-here">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo id doloribus exercitationem placeat deserunt libero voluptatibus distinctio expedita, ratione minus?</article>
         <article class="hero-btns">
         <button>buy now!</button>
         <button>wishlist <i class="fa fa-heart-o" aria-hidden="true"></i>
-        </button>
-
-        </article>
-        
+        </button>       
       </article>
     </article>
     </section>
@@ -46,9 +44,13 @@
   <section class="categories">
     <h2>categories</h2>
   </section>
+  <div class="newsletter">
+    Subscribe to our newslatter to get new aditions first
+  </div>
        </main> 
   <footer>
     <iframe src="partials/footer.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
   </footer>
+  <script src="js/javascript.js"></script>
 </body>
 </html>
