product cards done

--- a/index.html
+++ b/index.html
@@ -6,9 +6,33 @@
   <title>MetroJewel</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/productCard.css">
 
 </head>
 <body>
+  <section class="top">
+    <article class="start">
+      <ul>
+        <li><a href="">
+          <i class="fa fa-envelope-o" aria-hidden="true"></i>
+          metrojewel-customers@gmail.com
+        </a></li>
+        <li><a href="">
+          <i class="fa fa-phone" aria-hidden="true"></i>+3859120289301
+        </a></li>
+        <li><a href="">
+          <i class="fa fa-whatsapp" aria-hidden="true"></i>
+          +3859120289301
+        </a></li>
+      </ul>
+    </article>
+    <article class="end">
+      <ul>
+        <li>ENG<i class="fa fa-long-arrow-down" aria-hidden="true"></i>
+        </li>
+      </ul>
+    </article>
+  </section>
    <header>
     <iframe src="partials/header.html" frameborder="0" width="100%" class="auto-height-iframe"></iframe>
   </header>
@@ -22,27 +46,92 @@
         <article class="moto">Urban Pulse, Graceful Living</article>
         <article class="buy-here">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo id doloribus exercitationem placeat deserunt libero voluptatibus distinctio expedita, ratione minus?</article>
         <article class="hero-btns">
-        <button>buy now!</button>
-        <button>wishlist <i class="fa fa-heart-o" aria-hidden="true"></i>
+        <button>explore</button>
+        <button>wishlist  <i class="fa fa-heart-o" aria-hidden="true"></i>
         </button>       
       </article>
     </article>
     </section>
-    <h2 style="background-color: white;">best sellers</h2>
-    <section class="best-sellers">
-      <article class="product-card"> 
-      <img class="product" src="../images/products/narukvica1.webp" alt="">
-      <h3>product name</h3>
-      <p>Delivery in 5-7 days</p>
-      <p>35.99$</p>
-      <article class="shopping">
-       <button class="cart">add to cart</button>
-      <button class="buy">buy</button>
-    </article>
-    </article>
+    <section class="discount">
+      25% DISCOUNT on new winter colection
+    </section>
+    <h2>new in</h2>
+    <section class="new-in">
+      <article class="product-card">
+        <article class="product-card-top">
+          <img class="product-image" src="/images/products/narukvica1.webp" alt="">
+        </article>
+        <article class="product-card-bottom">
+            <p class="category">braclets</p>
+            <p class="title">Bracelet volcanic stone</p>
+            <p class="price">56€</p>
+            <p class="desctiption">Bracelet made out of volcanic stone with elements of metal alloy with patina and leather detail. <br>
+              The lenght of the bracelet is 22 cm (if you want different lenght please write it in order “Notes”).</p>
+          <article class="price-wrapper">
+            <article class="amount-wrapper">
+              <button class="amount-button amount-less">-</button>
+            <span class="amount">0</span>
+            <button class="amount-button amount-more">+</button>
+            </article>
+            <span class="total">0</span>
+          </article>
+        </article>
+        <article class="buttons">
+          <article class="cart">BUY now</article>
+          <article class="wishlist">wishlist  <i class="fa fa-heart-o" aria-hidden="true"></i></article>
+        </article>
+      </article>
+      <article class="product-card">
+        <article class="product-card-top">
+          <img class="product-image" src="/images/products/narukvica1.webp" alt="">
+        </article>
+        <article class="product-card-bottom">
+            <p class="category">braclets</p>
+            <p class="title">Bracelet volcanic stone</p>
+            <p class="price">56€</p>
+            <p class="desctiption">Bracelet made out of volcanic stone with elements of metal alloy with patina and leather detail. <br>
+              The lenght of the bracelet is 22 cm (if you want different lenght please write it in order “Notes”).</p>
+          <article class="price-wrapper">
+            <article class="amount-wrapper">
+              <button class="amount-button amount-less">-</button>
+            <span class="amount">0</span>
+            <button class="amount-button amount-more">+</button>
+            </article>
+            <span class="total">0</span>
+          </article>
+        </article>
+        <article class="buttons">
+          <article class="cart">BUY now</article>
+          <article class="wishlist">wishlist  <i class="fa fa-heart-o" aria-hidden="true"></i></article>
+        </article>
+      </article>
+      <article class="product-card">
+        <article class="product-card-top">
+          <img class="product-image" src="/images/products/narukvica1.webp" alt="">
+        </article>
+        <article class="product-card-bottom">
+            <p class="category">braclets</p>
+            <p class="title">Bracelet volcanic stone</p>
+            <p class="price">56€</p>
+            <p class="desctiption">Bracelet made out of volcanic stone with elements of metal alloy with patina and leather detail. <br>
+              The lenght of the bracelet is 22 cm (if you want different lenght please write it in order “Notes”).</p>
+          <article class="price-wrapper">
+            <article class="amount-wrapper">
+              <button class="amount-button amount-less">-</button>
+            <span class="amount">0</span>
+            <button class="amount-button amount-more">+</button>
+            </article>
+            <span class="total">0</span>
+          </article>
+        </article>
+        <article class="buttons">
+          <article class="cart">BUY now</article>
+          <article class="wishlist">wishlist  <i class="fa fa-heart-o" aria-hidden="true"></i></article>
+        </article>
+      </article>
   </section>
-  <section class="categories">
-    <h2>categories</h2>
+  <section class="best-sellers">
+    <h2>best-sellers</h2>
   </section>
   <div class="newsletter">
     Subscribe to our newslatter to get new aditions first
