product filter, produt list, page num 80%

--- a/shop.html
+++ b/shop.html
@@ -14,8 +14,7 @@
   <main>
     <section class="filler"></section>
     <section class="sorting">
-        <article class="filter">
-          <div class="wrapper">
+        <aside class="filter">
           <p>All</p>
           <p>filter by:</p>
           <form>
@@ -28,19 +27,19 @@
               <input type="checkbox" name="colections" id="best">
               <label for="best">best sellers</label><br>
               <input type="checkbox" name="colections" id="industrial">
-              <label for="indutrial">industrial</label><br>
+              <label for="industrial">industrial</label><br>
               <input type="checkbox" name="colections" id="sea">
               <label for="sea">sea</label><br>
             </fieldset>
             <fieldset class="price">
-              <legend>price</legend>
+              <legend>max price</legend>
               <input type="range" min="50" max="1500" value="400" class="slider" id="sliderRange">
               <p id="demo"></p>
             </fieldset>
             <fieldset class="categories">
               <legend>categories</legend>
               <input type="checkbox" name="category" id="braclets">
-              <label for="bracelet">bracelets</label><br>
+              <label for="braclets">bracelets</label><br>
               <input type="checkbox" name="category" id="necklaces">
               <label for="necklaces">necklaces</label><br>
               <input type="checkbox" name="category" id="earings">
@@ -71,8 +70,8 @@
               <label for="corals">corals</label><br>
               <input type="checkbox" name="material" id="pearls">
               <label for="pearls">river pearls</label><br>
-              <input type="checkbox" name="material" id="pearls">
-              <label for="pearls">vulcanic stone</label>
+              <input type="checkbox" name="material" id="vulcanic">
+              <label for="vulcanic">vulcanic stone</label>
             </fieldset>
             <fieldset>
               <legend>avaliability</legend>
@@ -82,28 +81,95 @@
               <label for="out_stock">out of stock</label>
            </fieldset>
           </form>
-        </div>
-        </article>
-        <article class="title-banner">
-          <h2>all products</h2>
-          <button class="sort-btn">sort by</button>
-          <button class="sort-n-filter-btn"><i class="fa fa-sliders" aria-hidden="true">sort and filter</i>
-          </button>
-        </article>
-        <article class="product-list">
-          <article class="product">
-            <article><img src="" alt="">
-            </article>
-            <article class="description">
-              <p class="product-category"></p>
-              <p class="product-title"></p>
-              <p class="product-price"></p>
+        </aside>
+        <article class="products-wrapper">
+          <article class="products-title">
+            <h2>all products</h2>
+            <button class="sort-btn">sort by</button>
+            <button class="sort-n-filter-btn"><i class="fa fa-sliders" aria-hidden="true">sort and filter</i>
+            </button>
+          </article>
+          <article class="products-list">
+            <article class="prod-wrapper">
+              <article class="product">
+                <figure class="product-img">
+                  <img src="images/products/narukvica1.webp" alt="narukvica1">
+                  <i class="fa fa-gratipay wishlist-icon" aria-hidden="true"></i>
+                </figure>
+                <article class="description">
+                <p class="product-category">braclets</p>
+                <p class="product-title">river pearl braclet</p>
+                <p class="product-price">56€</p>
+              </article>
+              </article>
+              <article class="product">
+                <figure class="product-img">
+                  <img src="images/products/narukvica1.webp" alt="narukvica1">
+                </figure>
+                <article class="description">
+                <p class="product-category">braclets</p>
+                <p class="product-title">river pearl braclet</p>
+                <p class="product-price">56€</p>
+              </article>
+              </article>
+              <article class="product">
+                <figure class="product-img">
+                  <img src="images/products/narukvica1.webp" alt="narukvica1">
+                </figure>
+                <article class="description">
+                <p class="product-category">braclets</p>
+                <p class="product-title">river pearl braclet</p>
+                <p class="product-price">56€</p>
+              </article>
+              </article>
+              <article class="product">
+                <figure class="product-img">
+                  <img src="images/products/narukvica1.webp" alt="narukvica1">
+                </figure>
+                <article class="description">
+                <p class="product-category">braclets</p>
+                <p class="product-title">river pearl braclet</p>
+                <p class="product-price">56€</p>
+              </article>
+              </article>
+              <article class="product">
+                <figure class="product-img">
+                  <img src="images/products/narukvica1.webp" alt="narukvica1">
+                </figure>
+                <article class="description">
+                <p class="product-category">braclets</p>
+                <p class="product-title">river pearl braclet</p>
+                <p class="product-price">56€</p>
+              </article>
+              </article>
+              <article class="product">
+                <figure class="product-img">
+                  <img src="images/products/narukvica1.webp" alt="narukvica1">
+                </figure>
+                <article class="description">
+                <p class="product-category">braclets</p>
+                <p class="product-title">river pearl braclet</p>
+                <p class="product-price">56€</p>
+              </article>
+              </article>
             </article>
           </article>
-        </article>
+          <article class="numbering">
+            <article>1</article>
+            <article>2</article>
+            <article>3</article>
+            <article>4</article>
+            <article>5</article>
+            <article>6</article>
+            <article>7</article>
+            <article>8</article>
+            <article>9</article>
+            <article>10</article>
+          </article>
+          </article>
+        </article> 
         </section>
         <section class="recomended">
-
     </section>
   </main>
   <footer>
