numbering done (style, disabled funcion), product list 80%(missing sorting button style)

--- a/newIn.html
+++ b/newIn.html
@@ -15,12 +15,12 @@
     <section class="filler"></section>
     <section class="sorting">
         <aside class="filter">
-          <p>All</p>
+          <p>New in</p>
           <p>filter by:</p>
           <form>
             <fieldset class="colections">
               <legend>colections</legend>
-              <input type="checkbox" name="colections" id="new">
+              <input type="checkbox" name="colections" id="new" checked>
               <label for="new">new in</label><br>
               <input type="checkbox" name="colections" id="limited">
               <label for="limited">limited</label><br>
@@ -84,7 +84,7 @@
         </aside>
         <article class="products-wrapper">
           <article class="products-title">
-            <h2>all products</h2>
+            <h2>new in</h2>
             <button class="sort-btn">sort by</button>
             <button class="sort-n-filter-btn"><i class="fa fa-sliders" aria-hidden="true">sort and filter</i>
             </button>
