--- a/index.html
+++ b/index.html
@@ -10,50 +10,38 @@
 
 </head>
 <body>
-  <section class="top">
-    <article class="start">
-      <ul>
-        <li><a href="">
-          <i class="fa fa-envelope-o" aria-hidden="true"></i>
-          metrojewel-customers@gmail.com
-        </a></li>
-        <li><a href="">
-          <i class="fa fa-phone" aria-hidden="true"></i>+3859120289301
-        </a></li>
-        <li><a href="">
-          <i class="fa fa-whatsapp" aria-hidden="true"></i>
-          +3859120289301
-        </a></li>
-      </ul>
-    </article>
-    <article class="end">
-      <ul>
-        <li>ENG<i class="fa fa-long-arrow-down" aria-hidden="true"></i>
-        </li>
-      </ul>
-    </article>
-  </section>
    <header>
     <iframe src="partials/header.html" frameborder="0" width="100%" class="auto-height-iframe"></iframe>
   </header>
   <main>
     <section id="hero-section">
       <article class="hero-section-content">
-      <img class="banner-pic" src="/images/graphics/supermodel-jewellery-photo-shoot-fashion-model-jewellery-78c4b3591760b96f5f5eb845d1ff1f66.png" alt="model">
+      <img class="banner-pic pic1" src="/images/graphics/supermodel-jewellery-photo-shoot-fashion-model-jewellery-78c4b3591760b96f5f5eb845d1ff1f66.png" alt="model">
     <article class="graphic"></article>
     </article>
       <article class="shop-now">
-        <article class="moto">Urban Pulse, Graceful Living</article>
-        <article class="buy-here">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo id doloribus exercitationem placeat deserunt libero voluptatibus distinctio expedita, ratione minus?</article>
+        <article class="shop-now-wrapper">
+         <article class="moto">Urban Pulse Graceful Living</article>
+        <article class="buy-here">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, aliquid enim tempora facilis distinctio eos! Porro, cum? Ea non quas enim sed! Modi cum dolore consectetur eos ipsum adipisci laboriosam!</article>
         <article class="hero-btns">
         <button>explore</button>
         <button>wishlist  <i class="fa fa-heart-o" aria-hidden="true"></i>
         </button>       
-      </article>
+      </article> 
+        </article>
     </article>
     </section>
     <section class="discount">
       25% DISCOUNT on new winter colection
+    </section>
+    <section class="carousel-container">
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
     </section>
     <h2>new in</h2>
     <section class="new-in">
