--- a/shop.html
+++ b/shop.html
@@ -8,9 +8,7 @@
   <title>Shop</title>
 </head>
 <body>
-  <header>
-    <iframe src="partials/header.html" frameborder="0" width="100%" class="auto-height-iframe"></iframe>
-  </header>
+  <header id="header"></header>
   <main>
     <section class="filler"></section>
     <section class="sorting">
@@ -176,10 +174,10 @@
         <section class="recomended">
     </section>
   </main>
-  <footer>
-    <iframe src="partials/footer.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
-  </footer>
+  <footer id="footer"></footer>
   <script src="js/javascript.js"></script>
   <script src="js/slider.js"></script>
+  <script src="js/headerLoad.js"></script>
+  <script src="js/footerLoad.js"></script>
 </body>
 </html>
