--- a/newIn.html
+++ b/newIn.html
@@ -8,9 +8,7 @@
   <title>Shop</title>
 </head>
 <body>
-  <header>
-    <iframe src="partials/header.html" frameborder="0" width="100%" class="auto-height-iframe"></iframe>
-  </header>
+  <header id="header"></header>
   <main>
     <section class="filler"></section>
     <section class="sorting">
@@ -20,7 +18,7 @@
           <form>
             <fieldset class="colections">
               <legend>colections</legend>
-              <input type="checkbox" name="colections" id="new" checked>
+              <input type="checkbox" name="colections" id="new">
               <label for="new">new in</label><br>
               <input type="checkbox" name="colections" id="limited">
               <label for="limited">limited</label><br>
@@ -84,7 +82,7 @@
         </aside>
         <article class="products-wrapper">
           <article class="products-title">
-            <h2>new in</h2>
+            <h2>all products</h2>
             <button class="sort-btn">sort by</button>
             <button class="sort-n-filter-btn"><i class="fa fa-sliders" aria-hidden="true">sort and filter</i>
             </button>
@@ -176,10 +174,10 @@
         <section class="recomended">
     </section>
   </main>
-  <footer>
-    <iframe src="partials/footer.html" frameborder="0" width="100%" class="auto-height-iframe" ></iframe>
-  </footer>
+  <footer id="footer"></footer>
   <script src="js/javascript.js"></script>
   <script src="js/slider.js"></script>
+  <script src="js/headerLoad.js"></script>
+  <script src="js/footerLoad.js"></script>
 </body>
 </html>
