--- a/index.html
+++ b/index.html
@@ -45,18 +45,47 @@
         </article>
     </article>
     </section>
-    <section class="discount">
-      25% DISCOUNT on new winter colection
+    <section class="new-in">
+      <h2>NEW in</h2>
+      <section class="carousel-container">
+        <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt="">
+        <article class="item">
+         <p>river pearl bracelet</p>
+         <p>56€</p>
+        </article></section>
+        <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt="">
+          <article class="item">
+            <p>river pearl bracelet</p>
+            <p>56€</p>
+           </article></section>
+        <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt="">
+          <article class="item">
+            <p>river pearl bracelet</p>
+            <p>56€</p>
+           </article></section>
+        <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt="">
+          <article class="item">
+            <p>river pearl bracelet</p>
+            <p>56€</p>
+           </article></section>
+        <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt="">
+          <article class="item">
+            <p>river pearl bracelet</p>
+            <p>56€</p>
+           </article></section>
+        <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt="">
+          <article class="item">
+            <p>river pearl bracelet</p>
+            <p>56€</p>
+           </article></section>
+        <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt="">
+          <article class="item">
+            <p>river pearl bracelet</p>
+            <p>56€</p>
+           </article></section>
+      </section>
     </section>
-    <section class="carousel-container">
-      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
-      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
-      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
-      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
-      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
-      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
-      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
-    </section>
+    
     <h2>new in</h2>
     <section class="new-in">
      
