--- a/newIn.html
+++ b/newIn.html
@@ -171,8 +171,19 @@
           </article>
         </article> 
         </section>
+        <h2>YOU MAY ALSO LIKE</h2>
         <section class="recomended">
+    <section class="carousel-container">
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
+      <section class="carousel-slide"><img src="images/products/narukvica1.webp" alt=""></section>
     </section>
+    </section>
+    
   </main>
   <footer id="footer"></footer>
   <script src="js/javascript.js"></script>
