--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <script src="js/javascript.js"></script>
   <script src="js/headerLoad.js"></script>
   <script src="js/footerLoad.js"></script>
-  <!-- <script src="js/popUp.js"></script> -->
+  <script src="js/popUp.js"></script>
 </body>
 </html>
 
