--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <section id="popUp">
     <article id="container">
       <article class="wrapper">
-        <button id="exit">x</button>
+        <button id="exit">X</button>
       <article class="popup-content">
         <h3>unlock 15% of your next order</h3>
         <p>and gain acces to exclusive sales, limited edition drops and more.</p>
