--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </main> 
   <footer id="footer"></footer>
   <script src="js/javascript.js"></script>
-  <script src="js/headerLoad.js"></script>
+  <script src="headerLoad.js"></script>
   <script src="js/footerLoad.js"></script>
   <script src="js/popUp.js"></script>
 </body>
