--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <main>
     <section id="hero-section">
       <img src="images/graphics/giphy.gif" alt="">
-      <p class="banner">URBAN PUSLE GRACEFUL LIVING</p>
+      <p class="banner">URBAN PUSLE GRACEFUL LIVING!</p>
     </section>
     <section class="new-in">
       <h2>NEW in</h2>
